CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
PROJECT(DR-PYTHAGORE)

SET(CMAKE_CXX_FLAGS "-std=c++11")
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} elements parser)

ADD_SUBDIRECTORY(lemon)
ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(elements)

SET(DP_SRC
    drpythagore.cpp
    )

ADD_EXECUTABLE(drpythagore
    ${DP_SRC})

SET_PROPERTY(TARGET drpythagore PROPERTY CXX_STANDARD_REQUIRED ON)
#SET_PROPERTY(TARGET drpythagore PROPERTY CXX_STANDARD 11)

TARGET_LINK_LIBRARIES(drpythagore dpelements dpparser)

